engding work with product pages

--- a/product1.html
+++ b/product1.html
@@ -328,15 +328,22 @@
 
     <div class="character">
         <div class="container">
-            <div class="character-title text-5xl leading-[60px] mb-14 ml-[9%]">Характеристики</div>
+            <div
+                class="character-title text-5xl md:text-[34px] sm:text-3xl leading-[60px] mb-14 md:mb-6 ml-[9%] md:ml-[2%]">
+                Характеристики
+            </div>
             <div class="character-items flex flex-col items-center gap-5">
-                <div class="character-item basis-[84%] w-[84%] bg-bgflex pt-6 pb-4 px-10 rounded-lg cursor-pointer">
+                <div
+                    class="character-item basis-[84%] md:basis-[95%] w-[84%] md:w-[95%] bg-bgflex pt-6 pb-4 px-10 sm:px-5 rounded-lg cursor-pointer">
                     <div class="flex justify-between">
-                        <h3 class="character-about text-[34px] leading-8">Летательный аппарат</h3>
+                        <h3 class="character-about text-[34px] md:text-[26px] ss:text-2xl leading-8 sm:leading-4">
+                            Летательный аппарат</h3>
                         <div><span class="plus-icon cursor-pointer block"></span></div>
                     </div>
                     <div class="sub-menu mt-[10px]">
-                        <div class="text-2xl">Общее название устройства (аппарата) для полётов в атмосфере или
+                        <div class="text-2xl md:text-lg ss:text-xl sm:text-sm sm:leading-5">Общее название устройства
+                            (аппарата) для полётов в атмосфере
+                            или
                             космическом
                             пространстве. Принцип полёта — понятие
                             определяющее категорию основных физических законов, принятых для описания движения заданного
@@ -345,13 +352,17 @@
                             создаётся подъёмная сила.</div>
                     </div>
                 </div>
-                <div class="character-item basis-[84%] w-[84%] bg-bgflex pt-6 pb-4 px-10 rounded-lg cursor-pointer">
+                <div
+                    class="character-item basis-[84%] md:basis-[95%] w-[84%] md:w-[95%] bg-bgflex pt-6 pb-4 px-10 sm:px-5 rounded-lg cursor-pointer">
                     <div class="flex justify-between">
-                        <h3 class="character-about text-[34px] leading-8">Основные характеристики</h3>
+                        <h3 class="character-about text-[34px] md:text-[26px] ss:text-2xl leading-8 sm:leading-4">
+                            Основные характеристики</h3>
                         <span class="plus-icon cursor-pointer"></span>
                     </div>
                     <div class="sub-menu mt-[10px]">
-                        <div class="text-2xl">По разнообразию конструкции существует 4 основных типа беспилотных
+                        <div class="text-2xl md:text-lg ss:text-xl sm:text-sm sm:leading-5">По разнообразию конструкции
+                            существует 4 основных типа
+                            беспилотных
                             летательных
                             аппаратов: Мультироторные –
                             мультикоптерные дроны; Беспилотник с неподвижным крылом; Однороторный дрон – беспилотный
@@ -361,13 +372,17 @@
                             используются как профессионалами, так и любителями</div>
                     </div>
                 </div>
-                <div class="character-item basis-[84%] w-[84%] bg-bgflex pt-6 pb-4 px-10 rounded-lg cursor-pointer">
+                <div
+                    class="character-item basis-[84%] md:basis-[95%] w-[84%] md:w-[95%] bg-bgflex pt-6 pb-4 px-10 sm:px-5 rounded-lg cursor-pointer">
                     <div class="flex justify-between">
-                        <h3 class="character-about text-[34px] leading-8">Функции БПЛА</h3>
+                        <h3 class="character-about text-[34px] md:text-[26px] ss:text-2xl leading-8 sm:leading-4">
+                            Функции БПЛА</h3>
                         <span class="plus-icon cursor-pointer"></span>
                     </div>
                     <div class="sub-menu mt-[10px]">
-                        <div class="text-2xl">Беспилотный летательный аппарат — летательный аппарат без экипажа на
+                        <div class="text-2xl md:text-lg ss:text-xl sm:text-sm sm:leading-5">Беспилотный летательный
+                            аппарат — летательный аппарат без
+                            экипажа на
                             борту.
                             БПЛА могут обладать разной степенью
                             автономности — от управляемых дистанционно до полностью автоматических, а также различаться
@@ -375,26 +390,34 @@
                             множеству других параметров.</div>
                     </div>
                 </div>
-                <div class="character-item basis-[84%] w-[84%] bg-bgflex pt-6 pb-4 px-10 rounded-lg cursor-pointer">
+                <div
+                    class="character-item basis-[84%] md:basis-[95%] w-[84%] md:w-[95%] bg-bgflex pt-6 pb-4 px-10 sm:px-5 rounded-lg cursor-pointer">
                     <div class="flex justify-between">
-                        <h3 class="character-about text-[34px] leading-8">Комплектация</h3>
+                        <h3 class="character-about text-[34px] md:text-[26px] ss:text-2xl leading-8 sm:leading-4">
+                            Комплектация</h3>
                         <span class="plus-icon cursor-pointer"></span>
                     </div>
                     <div class="sub-menu mt-[10px]">
-                        <div class="text-2xl">Значение. составление комплекта, дополнение до комплекта ◆ Комплектация
+                        <div class="text-2xl md:text-lg ss:text-xl sm:text-sm sm:leading-5">Значение. составление
+                            комплекта, дополнение до комплекта ◆
+                            Комплектация
                             железнодорожного строительства рельсами, шпалами
                             и прочими материалами. Вопрос комплектации войск будет решаться исключительно за счет
                             сокращения числа отсрочек от
                             призыва в армию. то же, что состав, комплект.</div>
                     </div>
                 </div>
-                <div class="character-item basis-[84%] w-[84%] bg-bgflex pt-6 pb-4 px-10 rounded-lg cursor-pointer">
+                <div
+                    class="character-item basis-[84%] md:basis-[95%] w-[84%] md:w-[95%] bg-bgflex pt-6 pb-4 px-10 sm:px-5 rounded-lg cursor-pointer">
                     <div class="flex justify-between">
-                        <h3 class="character-about text-[34px] leading-8">Отдельно приобретаются</h3>
+                        <h3 class="character-about text-[34px] md:text-[26px] ss:text-2xl leading-8 sm:leading-4">
+                            Отдельно приобретаются</h3>
                         <span class="plus-icon cursor-pointer"></span>
                     </div>
                     <div class="sub-menu mt-[10px]">
-                        <div class="text-2xl">Спрос и предложение по-разному соотносятся на рынке. Если количество
+                        <div class="text-2xl md:text-lg ss:text-xl sm:text-sm sm:leading-5">Спрос и предложение
+                            по-разному соотносятся на рынке. Если
+                            количество
                             желающих и
                             объем товаров равны, то стороны
                             заключают сделку или договор купли-продажи. Но одна из величин может оказаться больше.
@@ -415,65 +438,80 @@
 
     <section class="similar-p mt-24 md:mt-16 sm:mt-12 md:mb-16">
         <div class="container">
-            <h3 class="text-5xl leading-10 mb-14">Похожие товары</h3>
+            <h3 class="text-5xl md:text-[34px] sm:text-3xl leading-10 mb-14 md:mb-6 ss:mb-0 md:mt-4">Похожие товары</h3>
             <div class="swiper myproductSwiper hidden md:block">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <div class="p-item box-border text-white bg-bgflex mb-5 rounded-lg transition-[0.4s]">
+                        <div
+                            class="p-item-sw sm:w-[80%] box-border text-white bg-bgflex mb-5 rounded-lg transition-[0.4s]">
                             <div class="p-img mx-6 sm:mx-0 mt-4 max-w-[310px] sm:max-w-[218px]"><img
-                                    src="img/main/product-d1.png" alt="Dron1">
+                                    class="ss:max-w-[85%] ss:mx-auto" src="img/main/product-d1.png" alt="Dron1">
                             </div>
                             <div class="p-info ml-10 sm:ml-5">
-                                <div class="p-name leading-8 text-3xl sm:text-xl mt-7">Агродрон AGR A22</div>
+                                <div class="p-name leading-8 ss:leading-4 text-3xl ss:text-[1.75rem] sm:text-xl mt-7">
+                                    Агродрон
+                                    AGR A22</div>
                                 <div
-                                    class="p-about mt-8 sm:mt-2 mb-5 sm:mb-2 text-[22px] sm:text-lg leading-9 font-normal">
+                                    class="p-about mt-8 ss:mt-4 sm:mt-2 mb-5 sm:mb-2 text-[22px] sm:text-lg leading-9 font-normal">
                                     <p>Бренд: <span class="font-light">AGR</span></p>
                                     <p> Модель: <span class="font-light">101-0101</span></p>
                                 </div>
-                                <div class="p-price text-3xl sm:text-2xl leading-7 sm:leading-6 mb-12 sm:mb-6">$15001.27
+                                <div
+                                    class="p-price text-3xl ss:text-[1.75rem] sm:text-2xl leading-7 sm:leading-6 mb-12 sm:mb-6">
+                                    $15001.27
                                 </div>
                                 <button
-                                    class="p-shopping border px-14 md:px-16 sm:px-8 pt-4 pb-5 mb-16 sm:mb-8 text-2xl sm:text-[17px] sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
+                                    class="p-shopping border px-14 md:px-16 ss:px-8 pt-4 pb-5 mb-16 ss:mb-12 sm:mb-8 text-2xl ss:text-xl sm:text-[17px] ss:leading-3 sm:leading-[0.5rem] ss:block ss:ml-[13%] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
                                     в корзину</button>
                             </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="p-item box-border text-white bg-bgflex mb-5 sm:mb-0 rounded-lg transition-[0.4s]">
+                        <div
+                            class="p-item-sw sm:w-[80%] box-border text-white bg-bgflex mb-5 sm:mb-0 rounded-lg transition-[0.4s]">
                             <div class="p-img mx-6 sm:mx-0  mt-4 max-w-[310px] sm:max-w-[218px]"><img
-                                    src="img/main/product-d2.png" alt="Dron1">
+                                    class="ss:max-w-[85%] ss:mx-auto" src="img/main/product-d2.png" alt="Dron1">
                             </div>
                             <div class="p-info ml-10 sm:ml-5">
-                                <div class="p-name leading-8 text-3xl sm:text-xl mt-7">Дрон- Картограф STS M8</div>
+                                <div class="p-name leading-8 ss:leading-4 text-3xl ss:text-[1.75rem] sm:text-xl mt-7">
+                                    Дрон-
+                                    Картограф STS M8</div>
                                 <div
-                                    class="p-about mt-8 sm:mt-2 mb-5 sm:mb-2 text-[22px] sm:text-lg leading-9 font-normal">
+                                    class="p-about mt-8 ss:mt-4 sm:mt-2 mb-5 sm:mb-2 text-[22px] sm:text-lg leading-9 font-normal">
                                     <p>Бренд: <span class="font-light">STS</span></p>
                                     <p> Модель: <span class="font-light">101-11</span></p>
                                 </div>
-                                <div class="p-price text-3xl sm:text-2xl leading-7 sm:leading-6 mb-12 sm:mb-6">$18206.30
+                                <div
+                                    class="p-price text-3xl ss:text-[1.75rem] sm:text-2xl leading-7 sm:leading-6 mb-12 sm:mb-6">
+                                    $18206.30
                                 </div>
                                 <button
-                                    class="p-shopping border px-14 md:px-16 sm:px-8 pt-4 pb-5 mb-16 sm:mb-8 text-2xl sm:text-[17px] sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
+                                    class="p-shopping border px-14 md:px-16 ss:px-8 pt-4 pb-5 mb-16 ss:mb-12 sm:mb-8 text-2xl ss:text-xl sm:text-[17px] ss:leading-3 sm:leading-[0.5rem] ss:block ss:ml-[13%] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
                                     в корзину</button>
                             </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="p-item box-border text-white bg-bgflex mb-5 rounded-lg transition-[0.4s]">
+                        <div
+                            class="p-item-sw sm:w-[80%] box-border text-white bg-bgflex mb-5 rounded-lg transition-[0.4s]">
                             <div class="p-img mx-6 sm:mx-0 mt-4 max-w-[310px] sm:max-w-[218px]"><img
-                                    src="img/main/product-d3.png" alt="Dron1">
+                                    class="ss:max-w-[85%] ss:mx-auto" src="img/main/product-d3.png" alt="Dron1">
                             </div>
                             <div class="p-info ml-10 sm:ml-5">
-                                <div class="p-name leading-8 text-3xl sm:text-xl mt-7">Дрон - Картограф STS M1550</div>
+                                <div class="p-name leading-8 ss:leading-4 text-3xl ss:text-[1.75rem] sm:text-xl mt-7">
+                                    Дрон -
+                                    Картограф STS M1550</div>
                                 <div
-                                    class="p-about mt-8 sm:mt-2 mb-5 sm:mb-2 text-[22px] sm:text-lg leading-9 font-normal">
+                                    class="p-about mt-8 ss:mt-4 sm:mt-2 mb-5 sm:mb-2 text-[22px] sm:text-lg leading-9 font-normal">
                                     <p>Бренд: <span class="font-light">STS</span></p>
                                     <p> Модель: <span class="font-light">100-10</span></p>
                                 </div>
-                                <div class="p-price text-3xl sm:text-2xl leading-7 sm:leading-6 mb-12 sm:mb-6">$13802.86
+                                <div
+                                    class="p-price text-3xl ss:text-[1.75rem] sm:text-2xl leading-7 sm:leading-6 mb-12 sm:mb-6">
+                                    $13802.86
                                 </div>
                                 <button
-                                    class="p-shopping border px-14 md:px-16 sm:px-8 pt-4 pb-5 mb-16 sm:mb-8  text-2xl sm:text-[17px] sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
+                                    class="p-shopping border px-14 md:px-16 ss:px-8 pt-4 pb-5 mb-16 ss:mb-12 sm:mb-8 text-2xl ss:text-xl sm:text-[17px] ss:leading-3 sm:leading-[0.5rem] ss:block ss:ml-[13%] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
                                     в корзину</button>
                             </div>
                         </div>
