--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
     </div>
 
 
+
+
     <div class="main">
         <div class="container">
             <div class="max-w-[670px]">
@@ -137,6 +139,9 @@
                 <h1>Почему нам дверяют?</h1>
                 <h4>Наши приемущества </h4>
             </div>
+
+            <div class="adv-bg"></div>
+
 
             <div class="swiper advantageSwiper">
                 <div class="swiper-wrapper">
@@ -329,13 +334,18 @@
                 <h1>Наши предложения</h1>
                 <h4>Наша продукция</h4>
             </div>
+
+            <div class="product-bg"></div>
+
+
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="p-item box-border text-white bg-bgflex mb-5 rounded-lg transition-[0.4s]">
-                            <div class="p-img mx-6 sm:mx-0 mt-4 max-w-[310px] sm:max-w-[218px]"><img
+                            <a href="./product1.html"
+                                class="p-img mx-6 sm:mx-0 mt-4 max-w-[310px] sm:max-w-[218px]"><img
                                     src="img/main/product-d1.png" alt="Dron1">
-                            </div>
+                            </a>
                             <div class="p-info ml-10 sm:ml-5">
                                 <div class="p-name leading-8 text-3xl sm:text-xl mt-7">Агродрон AGR A22</div>
                                 <div
@@ -345,17 +355,18 @@
                                 </div>
                                 <div class="p-price text-3xl sm:text-2xl leading-7 sm:leading-6 mb-12 sm:mb-6">$15001.27
                                 </div>
-                                <button
-                                    class="p-shopping border px-14 md:px-16 sm:px-8 pt-4 pb-5 mb-16 sm:mb-8 text-2xl sm:text-[17px] sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
-                                    в корзину</button>
+                                <a href="./product1.html"
+                                    class="p-shopping border block mx-auto px-14 md:px-16 sm:px-8 pt-4 pb-5 mb-16 sm:mb-8 text-2xl sm:text-[17px] sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
+                                    в корзину</a>
                             </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="p-item box-border text-white bg-bgflex mb-5 sm:mb-0 rounded-lg transition-[0.4s]">
-                            <div class="p-img mx-6 sm:mx-0  mt-4 max-w-[310px] sm:max-w-[218px]"><img
+                            <a href="./product2.html"
+                                class="p-img mx-6 sm:mx-0  mt-4 max-w-[310px] sm:max-w-[218px]"><img
                                     src="img/main/product-d2.png" alt="Dron1">
-                            </div>
+                            </a>
                             <div class="p-info ml-10 sm:ml-5">
                                 <div class="p-name leading-8 text-3xl sm:text-xl mt-7">Дрон- Картограф STS M8</div>
                                 <div
@@ -365,17 +376,18 @@
                                 </div>
                                 <div class="p-price text-3xl sm:text-2xl leading-7 sm:leading-6 mb-12 sm:mb-6">$18206.30
                                 </div>
-                                <button
-                                    class="p-shopping border px-14 md:px-16 sm:px-8 pt-4 pb-5 mb-16 sm:mb-8 text-2xl sm:text-[17px] sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
-                                    в корзину</button>
+                                <a href="./product2.html"
+                                    class="p-shopping border block mx-auto px-14 md:px-16 sm:px-8 pt-4 pb-5 mb-16 sm:mb-8 text-2xl sm:text-[17px] sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
+                                    в корзину</a>
                             </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="p-item box-border text-white bg-bgflex mb-5 rounded-lg transition-[0.4s]">
-                            <div class="p-img mx-6 sm:mx-0 mt-4 max-w-[310px] sm:max-w-[218px]"><img
+                            <a href="./product3.html"
+                                class="p-img mx-6 sm:mx-0 mt-4 max-w-[310px] sm:max-w-[218px]"><img
                                     src="img/main/product-d3.png" alt="Dron1">
-                            </div>
+                            </a>
                             <div class="p-info ml-10 sm:ml-5">
                                 <div class="p-name leading-8 text-3xl sm:text-xl mt-7">Дрон - Картограф STS M1550</div>
                                 <div
@@ -385,9 +397,9 @@
                                 </div>
                                 <div class="p-price text-3xl sm:text-2xl leading-7 sm:leading-6 mb-12 sm:mb-6">$13802.86
                                 </div>
-                                <button
+                                <a href="./product3.html"
                                     class="p-shopping border px-14 md:px-16 sm:px-8 pt-4 pb-5 mb-16 sm:mb-8  text-2xl sm:text-[17px] sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
-                                    в корзину</button>
+                                    в корзину</a>
                             </div>
                         </div>
                     </div>
@@ -399,58 +411,55 @@
 
 
             <div class="p-box flex justify-between text-white mb-28 md:hidden">
-                <div class="p-items">
-                    <div
-                        class="p-item box-border h-[595px] w-[345px] text-white bg-bgflex rounded-lg transition-[0.4s]">
-                        <div class="p-img cursor-pointer mx-6 mt-4 max-w-[373px]"><img src="img/main/product-d1.png"
-                                alt="Dron1"></div>
-                        <div class="p-info ml-10">
-                            <div class="p-name leading-8 text-3xl mt-7">Агродрон AGR A22</div>
-                            <div class="p-about mt-8 mb-5 text-[22px] leading-9 font-normal">
+                <div class="p-items basis-[30%]">
+                    <div class="p-item box-border h-[98%] w-[98%] text-white bg-bgflex rounded-lg transition-[0.4s]">
+                        <a href="./product1.html" class="p-img block cursor-pointer mt-4 max-w-[90%] mx-auto"><img
+                                src="img/main/product-d1.png" alt="Dron1"></a>
+                        <div class="p-info ml-10 lg:ml-5">
+                            <div class="p-name leading-8 text-3xl lg:text-[22px] mt-7">Агродрон AGR A22</div>
+                            <div class="p-about mt-8 lg:mt-4 mb-5 text-[22px] lg:text-lg leading-9 font-normal">
                                 <p>Бренд: <span class="font-light">AGR</span></p>
                                 <p> Модель: <span class="font-light">101-0101</span></p>
                             </div>
                             <div class="p-price text-3xl leading-7 mb-12">$15001.27</div>
-                            <a href="product1.html"
-                                class="p-shopping cursor-pointer border px-14 pt-4 pb-5 mb-16 text-2xl text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
-                                в корзину</a>
                         </div>
+                        <a href="product1.html"
+                            class="p-shopping block max-w-fit mx-auto cursor-pointer border px-14 lg:px-7 pt-4 pb-5 mb-16 text-2xl lg:text-xl lg:leading-4 text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
+                            в корзину</a>
                     </div>
                 </div>
-                <div class="p-items">
-                    <div
-                        class="p-item box-border h-[595px] w-[345px] text-white bg-bgflex rounded-lg transition-[0.4s]">
-                        <div class="p-img cursor-pointer mx-6 mt-4 max-w-[373px]"><img src="img/main/product-d2.png"
-                                alt="Dron1"></div>
-                        <div class="p-info ml-10">
-                            <div class="p-name leading-8 text-3xl mt-7">Дрон- Картограф STS M8</div>
-                            <div class="p-about mt-8 mb-5 text-[22px] leading-9 font-normal">
+                <div class="p-items basis-[30%]">
+                    <div class="p-item box-border h-[98%] w-[98%] text-white bg-bgflex rounded-lg transition-[0.4s]">
+                        <a href="./product2.html" class="p-img block cursor-pointer mt-4 max-w-[90%] mx-auto"><img
+                                src="img/main/product-d2.png" alt="Dron1"></a>
+                        <div class="p-info ml-10 lg:ml-5">
+                            <div class="p-name leading-8 text-3xl lg:text-[22px] mt-7">Дрон- Картограф STS M8</div>
+                            <div class="p-about mt-8 lg:mt-4 mb-5 text-[22px] lg:text-lg leading-9 font-normal">
                                 <p>Бренд: <span class="font-light">STS</span></p>
                                 <p> Модель: <span class="font-light">101-11</span></p>
                             </div>
                             <div class="p-price text-3xl leading-7 mb-12">$18206.30</div>
-                            <button
-                                class="p-shopping border px-14 pt-4 pb-5 mb-16 text-2xl text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
-                                в корзину</button>
                         </div>
+                        <a href="product2.html"
+                            class="p-shopping block max-w-fit mx-auto cursor-pointer border px-14 lg:px-7 pt-4 pb-5 mb-16 text-2xl lg:text-xl lg:leading-4 text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
+                            в корзину</a>
                     </div>
                 </div>
-                <div class="p-items">
-                    <div
-                        class="p-item box-border h-[595px] w-[345px] text-white bg-bgflex rounded-lg transition-[0.4s]">
-                        <div class="p-img cursor-pointer mx-6 mt-4 max-w-[373px]"><img src="img/main/product-d3.png"
-                                alt="Dron1"></div>
-                        <div class="p-info ml-10">
-                            <div class="p-name leading-8 text-3xl mt-7">Дрон - Картограф STS M1550</div>
-                            <div class="p-about mt-8 mb-5 text-[22px] leading-9 font-normal">
+                <div class="p-items basis-[30%]">
+                    <div class="p-item box-border h-[98%] w-[98%] text-white bg-bgflex rounded-lg transition-[0.4s]">
+                        <a href="./product3.html" class="p-img block cursor-pointer mt-4 max-w-[90%] mx-auto"><img
+                                src="img/main/product-d3.png" alt="Dron1"></a>
+                        <div class="p-info ml-10 lg:ml-5">
+                            <div class="p-name leading-8 text-3xl lg:text-[22px] mt-7">Дрон - Картограф STS M1550</div>
+                            <div class="p-about mt-8 lg:mt-4 mb-5 text-[22px] lg:text-lg leading-9 font-normal">
                                 <p>Бренд: <span class="font-light">STS</span></p>
                                 <p> Модель: <span class="font-light">100-10</span></p>
                             </div>
                             <div class="p-price text-3xl leading-7 mb-12">$13802.86</div>
-                            <button
-                                class="p-shopping border px-14 pt-4 pb-5 mb-16 text-2xl text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
-                                в корзину</button>
                         </div>
+                        <a href="product3.html"
+                            class="p-shopping block max-w-fit mx-auto cursor-pointer border px-14 lg:px-7 pt-4 pb-5 mb-16 text-2xl lg:text-xl lg:leading-4 text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
+                            в корзину</a>
                     </div>
                 </div>
             </div>
