--- a/product1.html
+++ b/product1.html
@@ -526,9 +526,9 @@
                     class="drone-items basis-[32%] md:basis-[48%] ss:basis-[70%] sm:basis-[78%] w-[32%] md:w-[48%] ss:w-[70%] sm:w-[78%] h-auto">
                     <div
                         class="drone-item box-border h-[99%] w-[99%] text-white bg-bgflex rounded-lg transition-[0.4s]">
-                        <div class="p-img cursor-pointer mx-6 mt-4 max-w-[373px]"><img src="img/main/product-d1.png"
-                                alt="Dron1">
-                        </div>
+                        <a href="./product1.html" class="p-img cursor-pointer block mx-auto mt-4 max-w-[373px]"><img
+                                src="img/main/product-d1.png" alt="Dron1">
+                        </a>
                         <div class="p-info px-[30px]">
                             <div class="p-name leading-8 text-2xl xl:text-xl mt-7">Агродрон AGR A22</div>
                             <div class="p-about mt-4 mb-5 text-[20px] xl:text-lg leading-9 xl:leading-8 font-normal">
@@ -536,9 +536,9 @@
                                 <p> Модель: <span class="font-light">101-0101</span></p>
                             </div>
                             <div class="p-price text-3xl xl:text-2xl leading-7 mb-12">$15001.27</div>
-                            <button
+                            <a href="./product1.html"
                                 class="p-shopping mx-auto block border px-6 xl:px-5 py-2 xl:py-1 mb-10 text-2xl xl:text-lg text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
-                                в корзину</button>
+                                в корзину</a>
                         </div>
                     </div>
                 </div>
@@ -546,9 +546,9 @@
                     class="drone-items basis-[32%] md:basis-[48%] ss:basis-[70%] sm:basis-[78%] w-[32%] md:w-[48%] ss:w-[70%] sm:w-[78%] h-auto">
                     <div
                         class="drone-item box-border h-[99%] w-[99%] text-white bg-bgflex rounded-lg transition-[0.4s]">
-                        <div class="p-img cursor-pointer mx-6 mt-4 max-w-[373px]"><img src="img/main/product-d2.png"
-                                alt="Dron1">
-                        </div>
+                        <a href="./product2.html" class="p-img cursor-pointer block mx-auto mt-4 max-w-[373px]"><img
+                                src="img/main/product-d2.png" alt="Dron1">
+                        </a>
                         <div class="p-info px-[30px]">
                             <div class="p-name leading-8 text-2xl xl:text-xl mt-7">Дрон- Картограф STS M8</div>
                             <div class="p-about mt-4 mb-5 text-[20px] xl:text-lg leading-9 xl:leading-8 font-normal">
@@ -556,9 +556,9 @@
                                 <p> Модель: <span class="font-light">101-11</span></p>
                             </div>
                             <div class="p-price text-3xl xl:text-2xl leading-7 mb-12">$18206.30</div>
-                            <button
+                            <a href="./product2.html"
                                 class="p-shopping mx-auto block border px-6 xl:px-5 py-2 xl:py-1 mb-10 text-2xl xl:text-lg text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
-                                в корзину</button>
+                                в корзину</a>
                         </div>
                     </div>
                 </div>
@@ -566,9 +566,9 @@
                     class="drone-items basis-[32%] md:basis-[48%] ss:basis-[70%] sm:basis-[78%] w-[32%] md:w-[48%] ss:w-[70%] sm:w-[78%] h-auto">
                     <div
                         class="drone-item box-border h-[99%] w-[99%] text-white bg-bgflex rounded-lg transition-[0.4s]">
-                        <div class="p-img cursor-pointer mx-6 mt-4 max-w-[373px]"><img src="img/main/product-d3.png"
-                                alt="Dron1">
-                        </div>
+                        <a href="./product3.html" class="p-img cursor-pointer block mx-auto mt-4 max-w-[373px]"><img
+                                src="img/main/product-d3.png" alt="Dron1">
+                        </a>
                         <div class="p-info px-[30px]">
                             <div class="p-name leading-8 text-2xl xl:text-xl mt-7">Дрон - Картограф STS M1550
                             </div>
@@ -577,9 +577,9 @@
                                 <p> Модель: <span class="font-light">100-10</span></p>
                             </div>
                             <div class="p-price text-3xl xl:text-2xl leading-7 mb-12">$13802.86</div>
-                            <button
+                            <a href="./product3.html"
                                 class="p-shopping mx-auto block border px-6 xl:px-5 py-2 xl:py-1 mb-10 text-2xl xl:text-lg text-lightgreen border-lightgreen transition-[0.8s] hover:bg-lightgreen hover:text-white">Добавить
-                                в корзину</button>
+                                в корзину</a>
                         </div>
                     </div>
                 </div>
